# VideoDownloader

./: .gitignore  Docker.txt  Dockerfile  README.md  TwitterVideoDownload.py  bot.py  discord_bot.py  docker-compose.yml  dockerfile  download.py  download_queue.json  downloader.py  environment.yml  main.py  pyproject.toml  requirements.txt  setup.sh  test.py  utils.py  validate.py
depr/: docker-compose.yml  main.py
depr/lib/: __init__.py
depr/lib/downloaders/: twitter.py
depr/lib/utils/: constants.py  get_env_variables.py  utility.py  validation.py
depr/tests/: test_main.py  test_stress.py  test_url_verification.py  test_utils.py
lib/: download.py  utils.py  validate.py
lib/downloaders/: __init__.py  youtube.py
lib/handler/: __init__.py  editor.py  handler.py
lib/utils/: __init__.py  constants.py  get_env_variables.py  utility.py
scripts/: GIF_converter.py  __init__.py  _download_handler.py  _twitter.py  _youtube.py  twitter_downloader.py  youtube_downloader.py
scripts/depracated/downloaders_old/: _download_handler.py  _youtube.py
scripts/depracated/twitter/: __init__.py
scripts/depracated/youtube/: __init__.py  _youtube_simple.py  set_options.py
scripts/downloaders/: __init__.py  _download_handler.py  _twitter.py  _youtube.py
scripts/handler/: editor.py  handler.py
src/twitterDownloader/: __init__.py  twitter_downloader.py
tests/: test_bot.py  test_host.py  test_utils.py
vidlib/: __init__.py
vidlib/utils/: utility.py
